--- a/book/templates/book/book_detail.html
+++ b/book/templates/book/book_detail.html
@@ -7,7 +7,11 @@
     <div class="p-4 m-4 bg-light border border-sucsess rounded">
         <h2 class="text-sucsess">{{ object.title }}</h2>
             <p>{{ object.text }}</p>
+            {% if object.thumbnail %}
+                <img src="{{ object.thumbnail.url }}"class="img-thumbnail" />
+            {% endif %}
             <div class="border p-4 mb-2">
+                <h2>レビュー</h2>
                 {% for review in object.review_set.all %}
                 <div>
                     <h3 class="h4">{{ review.title }}</h3>
