--- a/book/templates/book/review_form.html
+++ b/book/templates/book/review_form.html
@@ -30,7 +30,7 @@
             <option value="4">4</option>
             <option value="5">5（最高）</option>
         </select>
-        <input type="hidden" name="book" value="{{ book_id }}" />
+        <input type="hidden" name="book" value="{{ book.id }}" />
         <button type="submit" class="btn btn-success mt-4">投稿する</button>
     </form>
 {% endblock %}
