--- a/book/templates/book/book_list.html
+++ b/book/templates/book/book_list.html
@@ -4,34 +4,17 @@
 {% block h1 %}書籍一覧{% endblock %}
 
 {% block content %}
-<div class="row">
-    <div class="col-9">
-        {% for item in object_list %}
-        <div class="p-4 m-4 bg-light border border-sucsess rounded">
-            <h2 class="text-sucsess">{{ item.title }}</h2>
-            {% if item.thumbnail %}
-                <img src="{{ item.thumbnail.url }}"class="img-thumbnail" />
-            {% endif %}
-            <h6>カテゴリ：{{ item.category }}</h6>
-            <div class="mt-3">
-                <a href="{% url 'detail-book' item.pk %}">詳細へ</a>
-            </div>
+    {% for item in object_list %}
+    <div class="p-4 m-4 bg-light border border-sucsess rounded">
+        <h2 class="text-sucsess">{{ item.title }}</h2>
+        {% if item.thumbnail %}
+            <img src="{{ item.thumbnail.url }}"class="img-thumbnail" width="200" height="200" />
+        {% endif %}
+        <h6>カテゴリ：{{ item.category }}</h6>
+        <div class="mt-3">
+            <a href="{% url 'detail-book' item.pk %}">詳細へ</a>
         </div>
-        {% endfor %}
     </div>
-    <div class="col-3">
-        <h2>評価順TOP5</h2>
-        {% for ranking_book in page_obj %}
-        <div class="p-4 m-4 bg-light border border-sucsess rounded">
-            <h3 class="text-success h5">{{ ranking_book.title }}</h3>
-            {% if ranking_book.thumbnail %}
-                <img src="{{ ranking_book.thumbnail.url }}"class="img-thumbnail" />
-            {% endif %}
-            <h6>評価:{{ranking_book.avg_rating|floatformat:2}}点</h6>
-            <a href="{% url 'detail-book' ranking_book.id %}">詳細へ</a>
-        </div>
-        {% endfor %}
-        {% include 'book/components/pagination.html' %}
-    </div>
-</div>
+    {% endfor %}
+    {% include 'book/components/pagination.html' %}
 {% endblock content %}
