--- a/book/templates/book/book_confirm_delete.html
+++ b/book/templates/book/book_confirm_delete.html
@@ -5,6 +5,6 @@
 {% block content %}
     <form method='POST'>
         {% csrf_token %}
-        <button type='submit'>{{ object.title }}を削除する</button>
+        <button type='submit'>「{{ object.title }}」 を削除する</button>
     </form>
 {% endblock content %}
