--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -7,7 +7,7 @@
 {% block content %}
     <form method="post" class="p-4 m-4 bg-light border border-success rounded form-group">
         {% csrf_token %}
-        <input type='text' name="username" class="form-control mt-4" placeholder="ユーザーID">
+        <input type='text' name="username" class="form-control mt-4" placeholder="ユーザー名">
         <input type='password' name="password1" class="form-control mt-4" placeholder="パスワード">
         <input type='password' name="password2" class="form-control mt-4" placeholder="パスワード確認用">
         <small class="mb-2 d-block text-start">パスワードは8文字以上で設定してください。</small>
