--- a/book/templates/book/book_create.html
+++ b/book/templates/book/book_create.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
-{% block title %}書籍作成{% endblock %}
+{% block title %}書籍登録{% endblock %}
+{% block h1 %}書籍登録{% endblock %}
 
 {% block content %}
     <form method='POST' enctype="multipart/form-data" class="p-4 m-4 bg-light border border-success rounded form-group">{% csrf_token %}
