--- a/book/templates/book/review_form.html
+++ b/book/templates/book/review_form.html
@@ -7,28 +7,20 @@
 {% block content %}
     <form method='POST' class="p-4 m-4 bg-light border border-success">
         {% csrf_token %}
-        <label>
-            対象書籍
-        </label>
+        <label>対象書籍</label>
         <input class="form-control" value="{{ book.title }}" readonly>
-        <label>
-            タイトル
-        </label>
+        <label>タイトル</label>
         <input class="form-control" name="title">
-        <label>
-            本文
-        </label>
+        <label>本文</label>
         <textarea class="form-control" name="text" rows="3"></textarea>
-        <label>
-            星の数
-        </label>
+        <label>星の数</label>
         <select class="form-control" name="rate">
-            <option value="0">０（最低）</option>
+            <option value="0">0 (最低)</option>
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
             <option value="4">4</option>
-            <option value="5">5（最高）</option>
+            <option value="5">5 (最高)</option>
         </select>
         <input type="hidden" name="book" value="{{ book.id }}" />
         <button type="submit" class="btn btn-success mt-4">投稿する</button>
