--- a/book/templates/registration/login.html
+++ b/book/templates/registration/login.html
@@ -8,13 +8,13 @@
             {{ error }}
         {% endfor %}
         <label>
-            ユーザID
+            ユーザ名
         </label>
         <input class="form-control" name="username">
         <label>
             パスワード
         </label>
         <input type="password" class="form-control" name="password">
-        <button type="submit" class="btn btn-success mt-4">ログインする</button>
+        <button type="submit" class="btn btn-success mt-4">ログイン</button>
     </form> 
 {% endblock %}
