--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'book/css/style.css' %}"
 </head>
 <body>
-    <nav class="navbar nabvar-dark dg-sucsess sticky-top">
+    <nav class="navbar navbar-dark bg-dark sticky-top">
         <div class="navbar-nav d-flex flex-row">
             <a class="nav-link mx-3" href="{% url 'list-book' %}">書籍一覧</a>
             <a class="nav-link mx-3" href="{% url 'create-book' %}">書籍登録</a>
